--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@expo/webpack-config": "^0.12.52",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-community/viewpager": "^5.0.11",
@@ -17,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.2",
     "core-js": "^3.34.0",
     "jwt-decode": "^4.0.0",
@@ -25,6 +27,7 @@
     "react-native": "0.73.0",
     "react-native-asset": "^2.1.1",
     "react-native-auth0": "^2.17.4",
+    "react-native-calendars": "^1.1304.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
@@ -37,7 +40,9 @@
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "^0.19.9",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
