new changes in UI

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-AUTH0_DOMAIN="dev-8tjrasnlq302ey51.us.auth0.com"
-AUTH0_CLIENT_ID="SV2DsWEvZd86DWrtKv3VJHNFywPuXn7W"
+AUTH0_DOMAIN="dev-telehelpukraine.us.auth0.com"
+AUTH0_CLIENT_ID="p0kAe8cN24qvpOxapv6piX0ph8SPdepJ"
