--- a/ios/THUMobileAPP.xcodeproj/xcshareddata/xcschemes/THUMobileAPP.xcscheme
+++ b/ios/THUMobileAPP.xcodeproj/xcshareddata/xcschemes/THUMobileAPP.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "THUMobileAPP.app"
+               BuildableName = "com.THUMobileAPP.app"
                BlueprintName = "THUMobileAPP"
                ReferencedContainer = "container:THUMobileAPP.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "THUMobileAPP.app"
+            BuildableName = "com.THUMobileAPP.app"
             BlueprintName = "THUMobileAPP"
             ReferencedContainer = "container:THUMobileAPP.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "THUMobileAPP.app"
+            BuildableName = "com.THUMobileAPP.app"
             BlueprintName = "THUMobileAPP"
             ReferencedContainer = "container:THUMobileAPP.xcodeproj">
          </BuildableReference>
