--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.2",
     "core-js": "^3.34.0",
+    "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "moment-timezone": "^0.5.45",
     "react": "18.2.0",
@@ -43,7 +44,8 @@
     "react-native-web": "^0.19.9",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
