--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
