--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-auth0": "^2.17.4",
     "react-native-calendars": "^1.1304.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-document-picker": "^9.2.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.0",
