Updated PersonalInfo UI

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-document-picker": "^9.2.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "^3.5.4",
