--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.11.3",
+    "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
